force-app/main/default/objects/Account/fields/CAMPO_PRUEBA__c.field-meta.xml
<CustomField>
    <fullName>CAMPO_PRUEBA__c</fullName>
    <label>CAMPO PRUEBA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Español</fullName>
            </value>
            <value>
                <fullName>Matemáticas</fullName>
            </value>
            <value>
                <fullName>Sociales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>