force-app/main/default/objects/Account/fields/EEE__c.field-meta.xml
<CustomField>
    <fullName>EEE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EEE</label>
    <type>Checkbox</type>
</CustomField>