force-app/main/default/objects/Account/fields/EEI__c.field-meta.xml
<CustomField>
    <fullName>EEI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EEI</label>
    <type>Checkbox</type>
</CustomField>