force-app/main/default/objects/Account/fields/EES__c.field-meta.xml
<CustomField>
    <fullName>EES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EES</label>
    <type>Checkbox</type>
</CustomField>