force-app/main/default/objects/Account/fields/K_nder__c.field-meta.xml
<CustomField>
    <fullName>K_nder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kínder</label>
    <type>Checkbox</type>
</CustomField>