force-app/main/default/objects/Account/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <label>Municipio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjuntas</fullName>
            </value>
            <value>
                <fullName>Aguada</fullName>
            </value>
            <value>
                <fullName>Aguadilla</fullName>
            </value>
            <value>
                <fullName>Aguas Buenas</fullName>
            </value>
            <value>
                <fullName>Aibonito</fullName>
            </value>
            <value>
                <fullName>Añasco</fullName>
            </value>
            <value>
                <fullName>Arecibo</fullName>
            </value>
            <value>
                <fullName>Arecibo I</fullName>
            </value>
            <value>
                <fullName>Arecibo II</fullName>
            </value>
            <value>
                <fullName>Arroyo</fullName>
            </value>
            <value>
                <fullName>Barceloneta</fullName>
            </value>
            <value>
                <fullName>Barranquitas</fullName>
            </value>
            <value>
                <fullName>Bayamón I</fullName>
            </value>
            <value>
                <fullName>Bayamón II</fullName>
            </value>
            <value>
                <fullName>Bayamón III</fullName>
            </value>
            <value>
                <fullName>Cabo Rojo</fullName>
            </value>
            <value>
                <fullName>Caguas</fullName>
            </value>
            <value>
                <fullName>Caguas I</fullName>
            </value>
            <value>
                <fullName>Caguas II</fullName>
            </value>
            <value>
                <fullName>Camuy</fullName>
            </value>
            <value>
                <fullName>Canóvanas</fullName>
            </value>
            <value>
                <fullName>Carolina I</fullName>
            </value>
            <value>
                <fullName>Carolina II</fullName>
            </value>
            <value>
                <fullName>Cataño</fullName>
            </value>
            <value>
                <fullName>Cayey</fullName>
            </value>
            <value>
                <fullName>Ceiba</fullName>
            </value>
            <value>
                <fullName>Ciales</fullName>
            </value>
            <value>
                <fullName>Cidra</fullName>
            </value>
            <value>
                <fullName>Coamo</fullName>
            </value>
            <value>
                <fullName>Comerio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>