force-app/main/default/objects/Account/fields/Nivel__c.field-meta.xml
<CustomField>
    <fullName>Nivel__c</fullName>
    <label>Nivel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primario</fullName>
            </value>
            <value>
                <fullName>Secundario</fullName>
            </value>
            <value>
                <fullName>PS - Instituto</fullName>
            </value>
            <value>
                <fullName>PS- Otros</fullName>
            </value>
            <value>
                <fullName>Todos los niveles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>