force-app/main/default/objects/Account/fields/Nivel_de_educaci_n__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_educaci_n__c</fullName>
    <label>Nivel de educación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maestría</fullName>
            </value>
            <value>
                <fullName>Doctorado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>