force-app/main/default/objects/Account/fields/PK_EE__c.field-meta.xml
<CustomField>
    <fullName>PK_EE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PK EE</label>
    <type>Checkbox</type>
</CustomField>