force-app/main/default/objects/Account/fields/Pre_K_nder__c.field-meta.xml
<CustomField>
    <fullName>Pre_K_nder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Kínder</label>
    <type>Checkbox</type>
</CustomField>