force-app/main/default/objects/Account/fields/Profesi_n__c.field-meta.xml
<CustomField>
    <fullName>Profesi_n__c</fullName>
    <label>Profesión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maestro</fullName>
            </value>
            <value>
                <fullName>Tallerista</fullName>
            </value>
            <value>
                <fullName>Coordinador</fullName>
            </value>
            <value>
                <fullName>Psicólogo</fullName>
            </value>
            <value>
                <fullName>Trabajador Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>