force-app/main/default/objects/Account/fields/Regi_n__c.field-meta.xml
<CustomField>
    <fullName>Regi_n__c</fullName>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arecibo</fullName>
            </value>
            <value>
                <fullName>Bayamon</fullName>
            </value>
            <value>
                <fullName>Caguas</fullName>
            </value>
            <value>
                <fullName>Humacao</fullName>
            </value>
            <value>
                <fullName>Mayaguez</fullName>
            </value>
            <value>
                <fullName>Ponce</fullName>
            </value>
            <value>
                <fullName>San Juan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>