force-app/main/default/objects/Account/fields/Tipo_de_escuela__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_escuela__c</fullName>
    <label>Tipo de escuela</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pública</fullName>
            </value>
            <value>
                <fullName>Privada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>