force-app/main/default/objects/Account/fields/X10mo_Grado__c.field-meta.xml
<CustomField>
    <fullName>X10mo_Grado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>10mo Grado</label>
    <type>Checkbox</type>
</CustomField>