force-app/main/default/objects/Account/fields/X11mo_Grado__c.field-meta.xml
<CustomField>
    <fullName>X11mo_Grado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>11mo Grado</label>
    <type>Checkbox</type>
</CustomField>