force-app/main/default/objects/Account/fields/X12mo_Grado__c.field-meta.xml
<CustomField>
    <fullName>X12mo_Grado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>12mo Grado</label>
    <type>Checkbox</type>
</CustomField>