force-app/main/default/objects/Account/fields/X1er_Grado__c.field-meta.xml
<CustomField>
    <fullName>X1er_Grado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1er Grado</label>
    <type>Checkbox</type>
</CustomField>