force-app/main/default/objects/Account/fields/X2do_Grado__c.field-meta.xml
<CustomField>
    <fullName>X2do_Grado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2do Grado</label>
    <type>Checkbox</type>
</CustomField>