force-app/main/default/objects/Account/fields/X3er_Grado__c.field-meta.xml
<CustomField>
    <fullName>X3er_Grado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3er Grado</label>
    <type>Checkbox</type>
</CustomField>