force-app/main/default/objects/Account/fields/X4to_Grado__c.field-meta.xml
<CustomField>
    <fullName>X4to_Grado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4to Grado</label>
    <type>Checkbox</type>
</CustomField>