force-app/main/default/objects/Account/fields/X5to_Grado__c.field-meta.xml
<CustomField>
    <fullName>X5to_Grado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>5to Grado</label>
    <type>Checkbox</type>
</CustomField>