force-app/main/default/objects/Account/fields/X6to_Grado__c.field-meta.xml
<CustomField>
    <fullName>X6to_Grado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6to Grado</label>
    <type>Checkbox</type>
</CustomField>