force-app/main/default/objects/Account/fields/X8vo__c.field-meta.xml
<CustomField>
    <fullName>X8vo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>8vo</label>
    <type>Checkbox</type>
</CustomField>