force-app/main/default/objects/Account/fields/X9no_Grado__c.field-meta.xml
<CustomField>
    <fullName>X9no_Grado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>9no Grado</label>
    <type>Checkbox</type>
</CustomField>