force-app/main/default/objects/Account/recordTypes/Escuela.recordType-meta.xml
<RecordType>
    <fullName>Escuela</fullName>
    <active>true</active>
    <label>Escuela</label>
</RecordType>