force-app/main/default/objects/Account/listViews/Lista_de_Escuelas.listView-meta.xml
<ListView>
    <fullName>Lista_de_Escuelas</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>C_digo__c</columns>
    <columns>Nivel__c</columns>
    <columns>Municipio__c</columns>
    <columns>Regi_n__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Escuela</value>
    </filters>
    <label>Lista de Escuelas</label>
</ListView>