force-app/main/default/objects/Account/listViews/Lista_de_Recursos.listView-meta.xml
<ListView>
    <fullName>Lista_de_Recursos</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_PHONE3</columns>
    <columns>Profesi_n__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Lista de Recursos</label>
</ListView>